Edit button styling.

--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@
 
      </div>
      <main class="counter">
-        <input class="counter__number" readonly value="10">
+        <input class="counter__number" readonly value="0">
         <div class="counter__actions">
             <button class="counter__buton">-</button>
             <button class="counter__buton">+</button>
         </div>
      </main>
      <footer class="footer">
-        Inspired by <a href="https://tallycount.app/" class="footer_link"> Tally Count</a>. This is a student practice project.
+        Inspired by <a href="https://tallycount.app/" class="footer_link" target="_blank"> Tally Count</a>. This is a student practice project.
      </footer>
 </body>
 </html>
