--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 
     <link rel="stylesheet" href="/stylesheet.css">
 
+    <script src="/scripts.js"></script>
+
     <title>Tally Count</title>
 </head>
 <body>
