Update file structure and paths.

--- a/IWA_03/Challenge_1/html/index.html
+++ b/IWA_03/Challenge_1/html/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<script src="/IWA_03/scripts/scripts.js" defer type="module"></script>
+		<script src="/IWA_03/Challenge_1/scripts/scripts.js" defer type="module"></script>
   </head>
 
 	<body>
