--- a/IWA_03/Challenge_2/html/index.html
+++ b/IWA_03/Challenge_2/html/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html>
-    <script module="nwabisa"></script>
-    <script module="johannes"></script>
-    <script module="alex"></script>
-    <script nomodule="scripts"></script>
+  <script type="nomodule" src="/IWA_03/Challenge_2/scripts/nwabisa.js"></script>
+  <script type="nomodule" src="/IWA_03/Challenge_2/scripts/johannes.js"></script>
+  <script type="nomodule" src="/IWA_03/Challenge_2/scripts/alex.js"></script>
 
-    <body>
-        <h1>Our Team</h1>
-        
-        <ul>
-            <li id="nwabisa">Loading...</li>
-            <li id="johannes">Loading...</li>
-            <li id="alex">Loading...</li>
-        </ul>
-    </body>
+  <script src="/IWA_03/Challenge_2/scripts/scripts.js" defer type="module"></script>
+
+  <body>
+    <h1>Our Team</h1>
+
+    <ul>
+      <li id="nwabisa">Loading...</li>
+      <li id="johannes">Loading...</li>
+      <li id="alex">Loading...</li>
+    </ul>
+  </body>
 </html>
