Debugg shipping sript.

--- a/IWA_05/html/index.html
+++ b/IWA_05/html/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"> 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="/IWA_04/scripts/script.js" defer></script>
-    <title>Holiday Calculator</title>
+    <script src="/IWA_05/scripts/script.js" defer></script>
+    <title>Shipping Website</title>
 </head>
 <body>
-    <h1>This here will calculate your holidays.</h1>
+    <h1>Buy from the world's best online store!</h1>
 </body>
 </html>
