--- a/IWA_06/Challenge_1/html/index.html
+++ b/IWA_06/Challenge_1/html/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <script src="/IWA_06/scripts/script.js" defer></script>
+    <script src="/IWA_06/Challenge_1/scripts/script.js" defer></script>
 
     <title>IWA_06</title>
 </head>
