Edit tally count readme.

--- a/IWA_01/html/index.html
+++ b/IWA_01/html/index.html
@@ -48,7 +48,7 @@
 
      </div>
      <main class="counter">
-        <input data-key="number" class="counter__number" readonly value="0">
+        <input data-key="currentNumber" class="counter__number" readonly value="0">
         <div class="counter__actions">
             <button class="counter__button" data-key="subtract">-</button>
             <button class="counter__button" data-key="add">+</button>
